# mr.worldwide

./: .gitignore  Dockerfile  README.md  analyze_flags.py  argos_hola.py  audit_fonts.py  check_dimensions.py  check_dirs.py  check_mappings.py  check_missing_langs.py  check_pictures.py  check_usage.py  docker-compose.yml  download_assets.py  flag_colors.json  go.py  mr-worldwide.py  pexels_refill.py  pyproject.toml  requirements.txt  satisfy_images.py  setup.sh  start.py  test_images.py  todo.txt  translations.json
.github/workflows/: ci.yml
examples/permutations/: basic_text.py  custom_colors.py  custom_size_delay.py  flag_colors.py  full_package.py  icons_flag_colors.py  icons_rainbow.py  icons_smart_color.py  rainbow.py  sine_delay.py  smart_colors.py  specific_languages.py  text_array.py  use_icons.py
src/: analyze_flags.py  assets_manager.py  config.py  download_assets.py  mr_worldwide.py  pexels_refill.py  renderer.py  utils.py
src/mr_worldwide/: __init__.py  config.py  gif_generator.py  translator.py  web_api.py
src/mr_worldwide.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: check_mappings.py  check_usage.py  test_argos_hola.py  test_cli_integration.py  test_images.py  test_mr_worldwide.py
