[project]
name = "mr-worldwide"
version = "0.1.0"
description = ""
authors = [
    {name = "Juelz",email = "juliantx@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow (>=12.1.1,<13.0.0)",
    "numpy",
    "scipy",
    "requests"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
